[package]
name = "spud"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
open = "5.3.3"
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive"] }
confy = "2.0.0"
